@@ -47,8 +47,8 @@ public class UbicacionController {
                     content = @Content),
     })
     @GetMapping
-    public ResponseEntity<List<GetUbicacionDto>> findAll() {
-        return ResponseEntity.ok(ubicacionService.findAll().stream().map(GetUbicacionDto::of).collect(Collectors.toList()));
+    public List<GetUbicacionDto> getAll() {
+        return ubicacionService.findAll().stream().map(GetUbicacionDto::of).toList();
     }
 
     @Operation(summary = "Obtiene una ubicación")
@@ -70,10 +70,8 @@ public class UbicacionController {
                     content = @Content),
     })
     @GetMapping("/{id}")
-    public ResponseEntity<GetUbicacionDto> findById(@PathVariable Long id) {
-        return ubicacionService.findById(id)
-                .map(ubicacion -> ResponseEntity.ok(GetUbicacionDto.of(ubicacion)))
-                .orElseGet(() -> ResponseEntity.notFound().build());
+    public GetUbicacionDto getById(@PathVariable Long id) {
+        return GetUbicacionDto.of(ubicacionService.findById(id).get());
     }
 
     @Operation(summary = "Crea una ubicación (DA CÓDIGO 500 PERO SE CREA EXITOSAMENTE)")
@@ -95,8 +93,8 @@ public class UbicacionController {
                     content = @Content),
     })
     @PostMapping
-    public ResponseEntity<GetUbicacionDto> create(@RequestBody CreateUbicacionDto createUbicacionDto) {
-        return ResponseEntity.status(HttpStatus.CREATED).body(GetUbicacionDto.of(ubicacionService.save(createUbicacionDto)));
+    public ResponseEntity<GetUbicacionDto> saveUbicacion(@RequestBody GetUbicacionDto nuevo) {
+        return ResponseEntity.status(HttpStatus.CREATED).body(GetUbicacionDto.of(ubicacionService.saveUbicacion(nuevo)));
     }
 
     @Operation(summary = "Edita una ubicación")
@@ -108,7 +106,8 @@ public class UbicacionController {
                             examples = {@ExampleObject(
                                     value = """
                                             {
-                                                "nombre": "Sala de reuniones"
+                                                "id": 1,
+                                                "nombre": "Aula 2DAM"
                                             }
                                             """
                             )}
@@ -118,8 +117,19 @@ public class UbicacionController {
                     content = @Content),
     })
     @PutMapping("/{id}")
-    public ResponseEntity<GetUbicacionDto> update(@PathVariable Long id, @RequestBody Ubicacion ubicacionActualizada) {
-        return ResponseEntity.status(HttpStatus.OK).body(GetUbicacionDto.of(ubicacionService.update(id, ubicacionActualizada)));
+    public ResponseEntity<GetUbicacionDto> update(@PathVariable Long id,
+                                                  @io.swagger.v3.oas.annotations.parameters.RequestBody(
+                                                          description = "Cuerpo de la nota a editar", required = true,
+                                                          content = @Content(mediaType = "application/json",
+                                                                  schema = @Schema(implementation = GetUbicacionDto.class),
+                                                                  examples = @ExampleObject(value = """
+                                                                {
+                                                                                  "nombre": "Aula 2DAM",
+                                                                                  "equipos": []
+                                                                              }
+""")))
+                                                  @RequestBody Ubicacion ubicacionActualizada) {
+        return ResponseEntity.status(HttpStatus.OK).body(GetUbicacionDto.of(ubicacionService.editUbicacion(id, GetUbicacionDto.of(ubicacionActualizada))));
     }
 
     @Operation(summary = "Borra una ubicación")
@@ -134,8 +144,8 @@ public class UbicacionController {
                     content = @Content),
     })
     @DeleteMapping("/{id}")
-    public ResponseEntity<Void> delete(@PathVariable Long id) {
-        ubicacionService.deleteById(id);
+    public ResponseEntity<?> deleteUbicacion(@PathVariable Long id) {
+        ubicacionService.deleteUbicacion(id);
         return ResponseEntity.noContent().build();
     }
 }
